# absorptivity-vis

./: .dockerignore  .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
backend/: fresnel.py  gusarov.py  hagen_rubens.py  main.py  materials.py  models.py  raytrace.py  regime.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: compute.ts
frontend/src/components/: Header.tsx  Layout.tsx  VisualizationPlaceholder.tsx
frontend/src/components/ControlPanel/: ControlPanel.tsx  MaterialSelector.tsx  ParameterSlider.tsx  PolarisationSelector.tsx  WavelengthSelector.tsx  presets.ts
frontend/src/components/InfoPanel/: MethodologyPanel.tsx
frontend/src/components/Plots/: AbsorptivityVsAngle.tsx  AbsorptivityVsTemp.tsx  plotUtils.ts
frontend/src/components/RayTrace/: RayTraceCanvas.tsx  drawAnnotations.ts  drawParticles.ts  drawRays.ts
frontend/src/components/Results/: RegimeIndicator.tsx  ResultsPanel.tsx
frontend/src/components/sketch/: constants.ts  crosshatch.ts  noise.ts  sketchEllipse.ts  wobblyLine.ts
frontend/src/components/ui/: Tooltip.tsx
frontend/src/hooks/: useAbsorptivityCompute.ts  useParameters.ts  useRayTrace.ts
frontend/src/types/: index.ts
